<resources>
    <string name="app_name">Деловой Комплимент</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menuText">МЕНЮ</string>
    <string name="menu0">Домой</string>
    <string name="menu1">Избранное</string>
    <string name="menu2">Настройки</string>
    <string name="menu3">Инфо</string>
    <string name="menu4">Оценить</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuText1">Как правильно делать комплименты</string>
    <string name="menuText2">Как правильно принимать комплименты</string>
    <string name="menuText3">ТОП-8 ошибок в комплиментах</string>
    <string name="menuText4">ФОРМУЛЫ построения деловых комплиментов</string>
    <string name="menuText5">Лучшие темы для комплиментов в бизнес-среде</string>
    <string name="menuText6">500 лучших ПРИМЕРОВ деловых комплиментов</string>
    <string name="menuText7">Практические УПРАЖНЕНИЯ для Вашего мастерства</string>
    <string name="share">share</string>
    <string name="title_activity_activity_two">ActivityTwo</string>
    <string name="top8text1">Скрытая критика</string>
    <string name="top8text2">Нравоучения</string>
    <string name="top8text3">Претензии</string>
    <string name="top8text4">Гиперболы, явные преувеличения, лесть</string>
    <string name="top8text5">Высокомерная похвала</string>
    <string name="top8text6">Сравнение с другими людьми</string>
    <string name="top8text7">Двусмысленность</string>
    <string name="top8text8">Сомнения</string>
    <string name="fact8text1">Факты</string>
    <string name="fact8text2">Числа и третьи лица</string>
    <string name="fact8text3">Деловые качества и профессиональные навыки</string>
    <string name="fact8text4">От маленького шага к большой победе</string>
    <string name="fact8text5">От предмета к личности</string>
    <string name="fact8text6">Ваши чувства</string>
    <string name="up8text1">Как развить индивидуальное мастерство комплиментов</string>
    <string name="up8text2">Упражение 1. Фокус Позитивности</string>
    <string name="up8text3">Упражение 2. Фокус на Победителя</string>
    <string name="up8text4">Упражение 3. Благодарность</string>
    <string name="up8text5">Упражение 4. Звездное будущее</string>
    <string name="up8text6">Марафон «Ни дня без комплимента»</string>
    <string name="title_activity_slide">SlideActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="pr8text1">Компания, команда</string>
    <string name="pr8text2">Хорошо проделанная работа</string>
    <string name="pr8text3">Соискателям: комплименты для собеседования</string>
    <string name="pr8text4">Деловые качества: эмоциональный интеллект, коммуникации</string>
    <string name="pr8text5">Деловые качества: профессионализм, эффективность</string>
    <string name="pr8text6">Деловые качества: управление, организаторство, лидерство</string>
    <string name="pr8text7">Деловые качества: искусство мотивировать, убеждать</string>
    <string name="pr8text8">Деловые качества: искусство выступления, проведение презентаций</string>
    <string name="pr8text9">Проявленная находчивость, эрудиция</string>
    <string name="pr8text10">Офис</string>
    <string name="infoText">
    Это Ваш незаменимый помощник в бизнес-коммуникациях с деловыми партнерами и сотрудниками, который всегда под рукой!\n
Правильный ДЕЛОВОЙ КОМПЛИМЕНТ может принести успех Вашему Бизнесу или Карьере.\n\n
Человек, который искренне говорит удачные комплименты, позитивно запоминается, с ним приятно общаться, с ним хочется продолжать профессиональное взаимодействие и прислушиваться к его советам. \n\n
Практика говорить комплименты развивает Эмоциональный интеллект. \n\n
ДАННОЕ ПРИЛОЖЕНИЕ ПРАКТИЧНО\n
* Владельцам бизнеса и ТОП-менеджерам.\n
* Менеджера среднего звена, руководителям отделов и проектов.\n
* HR-ам.\n
* Всем, кому необходимо мотивировать персонал на новые достижения.\n
* Всем, кто взаимодействует с бизнес-партнерами, подрядчиками.\n
* Всем, кто ищет развития карьеры.\n
* Соискателям новой работы.\n
* Всем, кто заинтересован в нетворкинге (построении деловых связей).\n
* Всем, кто желает развивать Эмоциональный интеллект.\n\n
Если у Вас есть предложения о сотрудничестве или какие-либо вопросы, пишите, пожалуйста, на e-mail:\n
realmoment.trends@gmail.com\n\n
Сайт разработчика: http://realmoment-trends.com.ua\n
    </string>
    <string name="text_image1">ИСКРЕННОСТЬ\n
Комплимент – это особая форма похвалы, выражения одобрения, восхищения, признания или уважения. Основное его правило - это искренность! Это не лесть и не высокомерная похвала от родителя к ребенку, мол, ты – молодец. Это признание достоинств человека. \n
Говорите комплименты от души - уверенным, доброжелательным тоном. Избегайте показной мимики, дешёвых театральных жестов и напускной восторженности. Будьте естественны в своем желании сказать доброе слово! \n
Способность искренне говорить комплименты развивает Ваш эмоциональный интеллект. \n\n
ПЕРСОНАЛЬНОСТЬ\n
Комплимент должен быть персональным, эксклюзивным. Не говорите одни и те же слова всем, избегайте шаблонов. Обращайте внимание на те качества, что присущи данному человеку, то, что выделяет его как индивидуальность среди других. \n
Чтобы персонифицировать комплимент, обращайтесь к человеку по имени. \n\n
ПРОФЕССИОНАЛИЗМ И ДЕЛОВЫЕ КАЧЕСТВА\n
В бизнес-среде комплименты должны быть по поводу деловых качеств и профессионализма, а не по поводу внешнего вида. Деловые комплименты принято говорить в присутствии других людей - бизнес-партнеров и коллег. \n\n
ИЗБЕГАЙТЕ ТИПИЧНЫХ ОШИБОК\n
Комплименты не должны быть двусмысленными как на словах, так и по тону. Избегайте ТОП-8 распространенных ошибок, превращающих «комплименты» в негатив. Не путайте комплименты со скрытой критикой, претензиями, нравоучениями, лестью, высокомерной похвалой. \n\n
АКЦЕНТИРУЙТЕ ПОЗИТИВ\n
Акцентируйте успехи и достижения других! Ваше доброе слово усилит желание человека быть именно таким, каким Вы его отметили своим позитивным вниманием. \n\n
СВОЕВРЕМЕННОСТЬ\n
Комплимент – это удачный, своевременный акцент. Они не должны быть многочисленными, по поводу и без повода, иначе это будет воспринято как заигрывание или как давление. \n
Говорите комплимент сразу, как только заметили какой-то профессиональный успех другого человека. Пусть это будет мелочь – удачная идея, прекрасное выступление, вовремя выполненный проект и т.д. \n\n
Благодарите коллег за их помощь в работе. Замечайте те их профессиональные и деловые качества, которые Вы сами хотите развить. \n
Не забывайте про комплимент тому человеку или той команде, которая прекрасно справилась с поставленной задачей. Это укрепит Ваше деловое сотрудничество. \n\n
Руководитель с помощью искусного комплимента может легко мотивировать сотрудников на дальнейшие успехи и достижения, вселять веру в те деловые качества, которые сотруднику только предстоит развить. \n
Комплимент, брошенный в офисе с утра, часто способствует хорошему настроению на весь день. \n\n
При встрече с деловыми партнерами уместно в начале встречи сказать комплимент офису или хобби хозяину кабинета, если оно бросается в глаза. В завершении встречи уместно сказать комплимент о деловых качествах или хорошо проделанной работе. \n\n
Соискателю, пришедшему на собеседование, стоит сказать комплимент компании, связав его со своей заинтересованностью в данной вакансии.
</string>
    <string name="text_image2">Самый лучший ответ – просто сказать искренне «Спасибо». Тогда человеку будет приятно сказать Вам и в следующий раз что-то приятное.\n
Принимая похвалу, не спорьте с человеком. Не преуменьшайте свои достоинства. Ни в коем случае не нужно возражать: «Ой, ну, что Вы!..» и напрашиваться на дальнейшие комплименты.\n
Не будьте равнодушными. Ответ: «Да, я знаю» - говорит, что вам нет никакого дела до собеседника и его комплиментов. Фраза «Да, и Вы тоже» - переводит комплимент в обмен формальностями. \n
Просто улыбнитесь, поблагодарите. Улыбайтесь не кокетливо, а понимающе, принимая сказанное в свой адрес. \n\n
НАИБОЛЕЕ УДАЧНЫМИ БУДУТ ТАКИЕ ОТВЕТЫ: \n
•	«Благодарю Вас» \n
•	«Спасибо, мне очень приятно» \n
•	«Я рада слышать это именно от Вас» \n
•	«Вы подняли мне настроение на целый день» \n
•	«Благодарю, я действительно очень старался» \n
•	«Так приятно, что Вы это заметили» и т.д.
</string>
    <string name="text_image3">
•   Компания, команда.\n
•	Хорошо проделанная работа.\n
•	Офис.\n
•	Деловые качества, умения, навыки.\n
•	Что-то материальное, принадлежащее человеку (смартфон, ноутбук, автомобиль и т.д.), и через это его личность.\n
•	Хобби, если Вы о нем знаете или при беглом осмотре кабинета увлечение бросается в глаза.\n
•	Проявленная находчивость, нестандартный подход, эрудиция.
</string>
    <string name="text11">Часто бывает, что человек, который не умеет делать комплименты, может своей фразой обидеть собеседника, причем сам того не осознавая. \n\n
«У Вас так часто бывают гениальные идеи! Если бы Вы еще могли приложить их к нашему проекту, то цены бы Вам не было.» \n\n
«Ты создаешь такую креативную рекламу! А вот общаться с клиентами совсем не умеешь.» \n\n
Такими фразами Вы добавляете «ложку дегтя», и комплимент сводится к констатации негатива. \n\n
Комплимент НЕ может содержать фраз: «но», «однако», «если бы еще» и др. негативных сравнений.
    </string>
    <string name="text12">Помните, что комплимент должен просто акцентировать наличие какого-то качества. Он не должен быть подан с высока, иначе он превратится в нравоучение, как эти примеры. \n\n
«Ты очень удачно выручил коллегу на презентации, вступив в разговор и показав в нужном свете наш последний проект. Тебе следует и дальше проявлять в жизни больше инициативности.» \n\n
«У тебя золотые руки, ты создаешь такие красивые вещи. Если бы ты еще могла правильно себя подать на презентации, ты бы больше зарабатывала.» \n\n
Комплимент НЕ может содержать рекомендаций или практических советов по улучшению ситуации.
    </string>
    <string name="text13">Не стремитесь к совершенствованию людей и их качеств своими «комплиментами». То же относится и к совершенствованию чужого бизнеса. \n\n
«В Вашем салоне отличные парикмахеры, мастера своего дела! Если бы еще администраторы были более внимательны, то Ваш салон мог бы выйти на новый уровень.» \n\n
«Какой отличный вариант для рекламы ты придумал. Жаль только, что ты ничего не делаешь вовремя и не предложил его вчера, до запуска нового сайта.»
</string>
    <string name="text14">Положительное качество в комплименте может иметь лишь небольшое преувеличение. Если же оно превратится в грубую лесть, то некоторые люди могут просто-напросто никогда не простить Вам этого и Вы навсегда войдете в их память как подхалим и лжец. \n\n
Лесть — это чересчур преувеличенная действительность. \n\n
Комплимент, как правило, краток и содержателен. Он понятен, выражает одну-две мысли и не более. Лесть же — витиеватая, чересчур восхищенная, наигранная. \n\n
Такие «комплименты» можно распознать через фокус на том, что Вы – самый-самый, особенно на фоне других. \n\n
«Вы – самый лучший дизайнер.»
«Вы – единственный, кто всегда проявляет себя как компетентный специалист.»
«Какой же ты молодец! Другие так не умеют.»
</string>
</resources>