<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:configChanges="orientation"
    android:screenOrientation="portrait"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tirkiyaicloud.businesscompliments.fragments.FragmentMain">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:gravity="center"
                android:src="@mipmap/menu1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="10dp"
                    android:text="@string/menuText1"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/main_menu_text" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:src="@mipmap/bool1" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:gravity="center"
                android:src="@mipmap/menu2" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="10dp"
                    android:text="@string/menuText2"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/main_menu_text" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:src="@mipmap/bool2" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:gravity="center"
                android:src="@mipmap/menu3" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="10dp"
                    android:text="@string/menuText3"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/main_menu_text" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:src="@mipmap/bool3" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:gravity="center"
                android:src="@mipmap/menu4" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="10dp"
                    android:text="@string/menuText4"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/main_menu_text" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:src="@mipmap/bool4" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:id="@+id/layout5"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:gravity="center"
                android:src="@mipmap/menu5" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="10dp"
                    android:text="@string/menuText5"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/main_menu_text" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:src="@mipmap/bool5" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:id="@+id/layout6"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:gravity="center"
                android:src="@mipmap/menu6" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="10dp"
                    android:text="@string/menuText6"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/main_menu_text" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:src="@mipmap/bool6" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:id="@+id/layout7"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:gravity="center"
                android:src="@mipmap/menu7" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="10dp"
                    android:text="@string/menuText7"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/main_menu_text" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:src="@mipmap/bool7" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

    </LinearLayout>
</ScrollView>
